k8s/keycloak/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:25.0.6
          args: ["start-dev", "--import-realm"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: realm-config
              mountPath: /opt/keycloak/data/import
          resources:
            requests:
              cpu: "250m"
              memory: "768Mi"
            limits:
              cpu: "1"
              memory: "1.5Gi"
      volumes:
        - name: realm-config
          configMap:
            name: keycloak-realm
