k8s/keycloak/service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: ecommerce
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: LoadBalancer
